HTML file (removed JS code)

--- a/main.html
+++ b/main.html
@@ -10,26 +10,6 @@
     <h3>This is my first Javascript task</h3>
     <p>It consist of basics of Javascript and CRUD operations.</p>
 
-    <script>
-        function addStudent() {
-            return "Add function";
-        }
-        function listStudent() {
-            return "List function";
-        }
-        function searchStudent() {
-            return "Search function";
-        }
-        function updateStudent() {
-            return "Update function";
-        }
-        function removeStudent() {
-            return "Remove function";
-        }
-
-        const details = ['Archi', 20, 'A'];
-        console.log(details);
-       
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
